Framework for longTouch popups working